--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Yearn Finance" />
     <meta property="og:description" content="The yield protocol for digital assets" />
-    <meta property="og:image" content="https://yearn.fi/og.jpeg" />
+    <meta property="og:image" content="https://yearn.fi/og.png" />
     <meta property="og:url" content="https://yearn.fi" />
     <meta property="og:type" content="website" />
     
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Yearn Finance" />
     <meta name="twitter:description" content="The yield protocol for digital assets" />
-    <meta name="twitter:image" content="https://yearn.fi/og.jpeg" />
+    <meta name="twitter:image" content="https://yearn.fi/og.png" />
     
     <link rel="icon" href="/favicon.ico" />
     <title>Yearn Finance</title>
